# TTSPlugin

./: .gitignore  CMakeLists.txt  README.md
Plugin/Source/: EntryPoint.c
